fixing overflowing main content box by limiting p to max 50em

--- a/contents/css/_layout.sass
+++ b/contents/css/_layout.sass
@@ -7,6 +7,7 @@ body
   margin: 0
   padding: 0
   min-height: 100%
+  max-width: 100%
   display: flex
   justify-content: center
   align-items: stretch
@@ -30,6 +31,9 @@ body
   margin-left: golden-ratio(0.5em, 1)
   display: flex
   flex-flow: column
+
+  p
+    max-width: 50em
 
 .content
   flex: 1 0 auto
